Fixed alignment on header

--- a/_sass/solaris.scss
+++ b/_sass/solaris.scss
@@ -26,7 +26,9 @@ section {
 .solaris-brand {
   text-transform: uppercase;
   letter-spacing: 0.6em;
-  margin-right: -0.6em;
+  .last {
+    letter-spacing: normal;
+  }
 }
 
 .picture-section {
@@ -95,42 +97,43 @@ header {
 }
 
 .header-main {
-  height: 85vh;
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 100vh;
 }
 
 .header-scroll {
-  height: 15vh;
-  align-items: flex-start;
   display: flex;
+  align-items: center;
   justify-content: center;
+  height: 15vh;
+  transform: translateY(-15vh);
 }
 
 .masthead-box {
   text-align: center;
-  font-size: 40px;
+  font-size: 35px;
 }
 
 .masthead-logo {
-  padding: 0.6em 0.6em;
+  padding: 0.6em 0.3em;
   background-color: $solaris-bg-masthead-logo;
   text-transform: uppercase;
 }
 
 .masthead-notice {
-  padding: 0.2em 0.2em;
+  padding: 0.2em;
   background-color: $solaris-bg-masthead-notice;
 }
 
 .masthead-logo-brand {
-  font-size: 40px;
+  font-size: 35px;
   font-family: $masthead-font;
 }
 
 .masthead-logo-subtitle {
-  font-size: 16px;
+  font-size: 15px;
   font-family: $body-font;
 }
 
@@ -145,25 +148,27 @@ header {
   background: $solaris-bg-highlight 0 0;
   //border: 1px solid $primary;
   color: white;
+  &:focus, &:hover {
+    color: white;
+    background: $solaris-bg-highlight-alt;
+  }
 }
 
 .masthead-scroll-btn {
-  width: 44px;
-  height: 44px;
-  border-radius: 22px;
-  font-size: 16px;
-  padding: 12px;
+  width: 6vh;
+  height: 6vh;
+  border-radius: 3vh;
+  font-size: 2vh;
+  padding: 1.8vh;
   background: $solaris-bg-highlight 0 0;
   border: 1px solid $primary;
   color: white;
   transform: scale(1);
   animation: pulse 2s infinite;
-}
-
-.btn-header:hover, .btn-header:focus, .masthead-scroll-btn:hover,
-.masthead-scroll-btn:focus {
-  color: white;
-  background: $solaris-bg-highlight-alt;
+  &:focus, &:hover {
+    color: white;
+    background: $solaris-bg-highlight-alt;
+  }
 }
 
 @keyframes pulse {
@@ -186,11 +191,6 @@ header {
   .masthead-notice-text {
     font-size: 18px;
   }
-  @keyframes pulse {
-    0% {transform: scale(1.1);}
-    50% {transform: scale(1.3);}
-    100% {transform: scale(1.1);}
-  }
 }
 
 @include media-breakpoint-up(md) {
@@ -205,11 +205,6 @@ header {
   }
   .masthead-notice-text {
     font-size: 20px;
-  }
-  @keyframes pulse {
-    0% {transform: scale(1.3);}
-    50% {transform: scale(1.5);}
-    100% {transform: scale(1.3);}
   }
 }
 
@@ -226,11 +221,6 @@ header {
   .masthead-notice-text {
     font-size: 22px;
   }
-  @keyframes pulse {
-    0% {transform: scale(1.4);}
-    50% {transform: scale(1.6);}
-    100% {transform: scale(1.4);}
-  }
 }
 
 @include media-breakpoint-up(xl)  {
@@ -245,11 +235,6 @@ header {
   }
   .masthead-notice-text {
     font-size: 24px;
-  }
-  @keyframes pulse {
-    0% {transform: scale(1.5);}
-    50% {transform: scale(1.7);}
-    100% {transform: scale(1.5);}
   }
 }
 
